test/scripted/compilation2/errors/return_missing_value.bnj
# test:error 4:5 "'return' statement without a value (expected 'i32')"

func f() -> i32 {
    return;
}
